--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
+		<title>Alvina Damasio--Razafiarizaka | Jeu vidéo</title>
 
 		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
 		<link rel="stylesheet" href="../../css/jeu.css">
