--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
+		<title>Alvina Damasio--Razafiarizaka | Photographie</title>
 
 		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
 		<link rel="stylesheet" href="../../css/dut mmi.css">
@@ -22,33 +22,33 @@
 
 <div class="gallerie">
 <div class="dut_ligne_case">
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg" alt="Photo d'un playmobil."/></a> 
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg" alt="Photo d'une étagère."/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg" alt="Photo d'une rainette verte."/></a>
 </div>
 <div class="dut_ligne_case">
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg" alt="Photo de deux frères."/></a>
 </div>
 <div class="dut_ligne_case">
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg" alt="Photo d'une fleur jaune."/></a> 
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg" alt="Photo d'une empreinte de pas dans le sable."/></a>
 </div>
 <div class="dut_ligne_case">
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
-			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg" alt="Photo d'une statue de marin."/></a> 
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png" alt="Photo d'un macaron rose."/></a>
+			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg" alt="Photo d'un manchot."/></a>
 </div>
 <div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg"/></a>
+	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg" alt="Grosse photo d'une rainette verte."/></a>
 </div>
 <div class="dut_ligne_case">
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg"/></a>
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg"/></a>
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg"/></a> 
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg" alt="Photo d'une corde pendue."/></a>
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg" alt="Photo d'une petite fille qui sourit."/></a>
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg" alt="Photo d'un poisson clown."/></a> 
 </div>
 <div class="dut_ligne_case">
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg"/></a> 
-	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg"/></a>
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg" alt="Photo d'un petit garçon qui mange une glace."/></a> 
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg" alt="Photo d'une femme qui prend une photo dans le miroir."/></a>
 </div>
 </div>
 
