--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
+		<title>Alvina Damasio--Razafiarizaka | Photomontage</title>
 
         <link rel="stylesheet" href="../../css/style.css">
         <link rel="stylesheet" href="../../css/photomontage.css">
@@ -34,32 +34,32 @@
         <p class="date_photomontage"><span class="contour"> | </span>Octobre 2018<span class="contour"> | </span></p>
     </a>
     <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P3.jpg"/>
+        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P3.jpg" alt="Photomontage d'un alien combattant des soldats dans une forêt sombre. Vert, barbelé."/>
         <p class="date_photomontage"><span class="contour"> | </span>Avril 2019<span class="contour"> | </span></p>
     </a>
     <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P4.jpg"/>
+        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P4.jpg" alt="Photomontage de météroïtes qui s'écrasent sur Gallifrey. Dixième, Doctor Who, Tardis, Montagne."/>
         <p class="date_photomontage"><span class="contour"> | </span>Septembre 2019<span class="contour"> | </span></p>
     </a>
     <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P5.jpg"/>
+        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P5.jpg" alt="Photomontage de Stranger Things devant laboratoire Hawkins avec un dinner américain. Rouge, tempête."/>
         <p class="date_photomontage"><span class="contour"> | </span>Décembre 2019<span class="contour"> | </span></p>
     </a>
     <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P6.jpg"/>
+        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P6.jpg" alt="Photomontage d'une immense cave souterraine avec une tour. Bleu, aventurier, pont suspendu."/>
         <p class="date_photomontage"><span class="contour"> | </span>Janvier 2020<span class="contour"> | </span></p>
     </a>
     <div class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P7.jpg"/>
+        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P7.jpg" alt="Photomontage d'une jungle avec ruines aztèques. Vert, cascade, triangle, lumière, aventurier."/>
         <p class="date_photomontage"><span class="contour"> | </span>Septembre 2020<span class="contour"> | </span></p>
         <a class="lien_projet" href="../DUT MMI/infographie.html"><span class="contour"> | </span>Voir le projet<span class="contour"> | </span></a>
     </div>
     <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P8.jpg"/>
+        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P8.jpg" alt="Photomontage d'un immense cerf blanc qui regarde deux fillettes perdues dans les montagnes."/>
         <p class="date_photomontage"><span class="contour"> | </span>Décembre 2020<span class="contour"> | </span></p>
     </a>
     <a class="lien_photomontage">	
-        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P9.jpg"/>
+        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P9.jpg" alt="Photomontage sur le Petit Prince d'une île volante. Rose, renard, avion. Boîte."/>
         <p class="date_photomontage"><span class="contour"> | </span>Février 2021<span class="contour"> | </span></p>
     </a>
 </div>
