--- a/html/presentation.html
+++ b/html/presentation.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
+		<title>Alvina Damasio--Razafiarizaka | Présentation</title>
 
 		<link rel="stylesheet" href="../css/style.css">
 		<link rel="stylesheet" href="../css/flickity.css">
@@ -24,8 +24,10 @@
 	<p class="presentation_text">mail : alvinadr24@gmail.com</p>
 	
 	<p class="presentation_text">J'adore lire et écrire depuis que je suis petite. Dès que j'ai découvert les 
-		jeux vidéos (avec Pokémon Platine) j'ai voulu concevoir mes propres jeux, d'abord sur RPG Maker puis sur Unity. C'est à
-	travers eux d'ailleurs que j'ai rencontré Photoshop que je n'ai pas lâché depuis la sixième.</p>
+	jeux vidéos (avec Pokémon Platine) j'ai voulu concevoir mes propres jeux, d'abord sur RPG Maker puis sur Unity. C'est à
+	travers eux d'ailleurs que j'ai rencontré Photoshop que je n'ai pas lâché depuis la sixième. De manière générale je m'intéresse 
+	à la création d'histoire que j'ai pu expérimenter à travers de nombreux supports (photographie, illustration sur photoshop, vidéo, 
+	écriture, jeu vidéo, 3D).</p>
 </div>
 
 <!------------------------------------------------------ FOOTER ------------------------------------------------------>
