--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="icon" href="icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
+		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Narration"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
 		<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
@@ -37,27 +37,27 @@
 	</div>
 		<div class="photomontage_bande">
 			<a class="lien_image" href="./html/INDEX/photomontage.html">
-				<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg"/>
+				<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg" alt="Alvina DR - Illustration d'un pont entre deux falaises en bord de mer."/>
 				<p class="category_title"><span class="contour"> | </span>PHOTOMONTAGE<span class="contour"> | </span></p>
 			</a>
 			 <a class="lien_image" href="./html/INDEX/3d.html">
-				 <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg"/>
+				 <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg" alt="Alvina DR - Image d'une araignée cachée en-dessous d'un canapé."/>
 				 <p class="category_title"><span class="contour"> | </span>3D<span class="contour"> | </span></p>
 			</a>
 			 <a class="lien_image" href="./html/INDEX/photographie.html">
-				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg"/>
+				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg" alt="Alvina DR - Photographie d'une rainette verte."/>
 				<p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE<span class="contour"> | </span></p>
 			</a>
-			<a class="lien_image" href="./html/INDEX/jeu_video.html">
-				 <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg"/>
+			<a class="lien_image" href="./html/INDEX/jeu_video.html" >
+				 <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg" alt="Alvina DR - Écran titre jeu vidéo Crystal's Quest"/>
 				 <p class="category_title"><span class="contour"> | </span>JEU VIDÉO<span class="contour"> | </span></p>
 			</a>
 			<a class="lien_image" href="./html/INDEX/video.html">
-				<img class="couverture" src="./RESSOURCES/Couverture_Vidéo.jpg"/>
+				<img class="couverture" src="./RESSOURCES/Couverture_Vidéo.jpg" alt="Alvina DR - Photographie d'un monstre au bout d'un tunnel."/>
 				<p class="category_title"><span class="contour"> | </span>VIDÉOS<span class="contour"> | </span></p>
 			</a>
 			<a class="lien_image" href="./html/INDEX/web.html">
-				 <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg"/>
+				 <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg" alt="Alvina DR - Exemple d'un site web dans un mockup d'ordinateur."/>
 				 <p class="category_title"><span class="contour"> | </span>WEB<span class="contour"> | </span></p>
 			</a>
 			<!--a class="lien_image" href="./html/INDEX/ecriture.html">
