--- a/html/INDEX/3d.html
+++ b/html/INDEX/3d.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
+		<title>Alvina Damasio--Razafiarizaka | 3D</title>
 
         <link rel="stylesheet" href="../../css/style.css" id="theme-link">
         <link rel="stylesheet" href="../../css/photomontage.css">
