lettre qui changent page d'accueil

--- a/html/INDEX/web.html
+++ b/html/INDEX/web.html
@@ -8,7 +8,7 @@
 
 		<title>Alvina Damasio--Razafiarizaka | Web</title>
 
-		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
+		<link rel="stylesheet" href="../../css/style.css">
 		<link rel="stylesheet" href="../../css/dut mmi.css">
 		<link rel="stylesheet" href="../../css/flickity.css">
 		
@@ -21,15 +21,15 @@
 <p class="presentation_text">Création de site.</p>
 
 <div class="dut_ligne_case">
-	<a class="dut_projet" href="../../html/DUT MMI/museum.html">
+	<a class="dut_projet" href="../../html/TRAVAUX.html">
 		<img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Musée d'Aquitaine.jpg"/>
 		<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Musée d'Aquitaine<span class="contour"> | </span></p>
 	</a>
-	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+	<a class="dut_projet" href="../../html/TRAVAUX.html">
 		<img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Tech'art.jpg"/>
 		<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Tech'art<span class="contour"> | </span></p>
 	</a>	
-	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+	<a class="dut_projet" href="../../html/TRAVAUX.html">
 		<img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Portfolio.jpg"/>
 		<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Portfolio<span class="contour"> | </span></p>
 	</a>
@@ -41,7 +41,6 @@
 <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="../../js/flickity.pkgd.js"></script>
-<script src="../../js/navbar.js"></script>
 <!--------------------------------------------------------------------------------------------------------------->
 
 	</body>
