--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="present_case1">
 			<p class="present_title">-   GRAPHISME, JEU VIDÉO ET CRÉATION D'HISTOIRE   -</p>
 			<p class="present_text"><span class="contour"> | </span> 1ère année DUT MMI <span class="contour"> | </span></p>
-			<p class="present_big">Alvina DR</p>
+			<h1 class="present_big">Alvina DR</h1>
 		</div>
 			<p class="present_date" >[ PORTFOLIO 2021 ]</p>
 			<section class="social_menu index">
@@ -93,6 +93,7 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="js/flickity.pkgd.js"></script>
+<script src="js/title.js"></script>
 
 <!--------------------------------------------------------------------------------------------------------------->
 	</body>
