gros changement sur la landing page, ajout d'animation des box de category de présentation avec infos + title qui remontent en hover

--- a/html/0commons/navbar.html
+++ b/html/0commons/navbar.html
@@ -19,6 +19,7 @@
             <li><a href="../../index.html" target="_parent">ACCUEIL</a></li>
             <!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
             <li><a href="../presentation.html" target="_parent">PRÉSENTATION</a></li>
+            <li><a href="../presentation.html" target="_parent">CONTACT</a></li>
         </nav>
     </div>
 
