--- a/index.html
+++ b/index.html
@@ -1,72 +1,178 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Narration"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="icon.ico" />
+	<meta name="description"
+		content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Narration" />
+	<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
+	<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
 
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/flickity.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/flickity.css">
 
-	</head>
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+</head>
 
-<iframe class="include fix" src="html/0commons/navbar.html" seamless></iframe>
-<!------------------------------------------------------ PROJETS ------------------------------------------------>
+<body>
+	<!--------------------------------------------------------- MENU ------------------------------------------------------>
+
+	<iframe class="include fix" src="html/0commons/navbar.html" seamless></iframe>
+	<!------------------------------------------------------ PROJETS ------------------------------------------------>
 
 	<div class="present_bande">
+
+
 		<div class="present_case1">
-			<p class="present_title">-   GRAPHISME, JEU VIDÉO ET CRÉATION D'HISTOIRE   -</p>
-			<p class="present_text"><span class="contour"> | </span> 1ère année DUT MMI <span class="contour"> | </span></p>
+			<p class="present_title">- GRAPHISME, JEU VIDÉO ET CRÉATION D'HISTOIRE -</p>
+			<p class="present_text"><span class="contour"> | </span> 1ère année DUT MMI <span class="contour"> | </span>
+			</p>
 			<h1 class="present_big">Alvina DR</h1>
 		</div>
-			<p class="present_date" >[ PORTFOLIO 2021 ]</p>
-			<section class="social_menu index">
-				<ul>
-    				<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-    				<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-    				<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-  				</ul>
-			</section>
-			<img class="scroll_down" src="./RESSOURCES/scroll_down.png"/>
+		<p class="present_date">[ PORTFOLIO 2021 ]</p>
+		<section class="social_menu index">
+			<ul>
+				<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i
+							class="fa fa-linkedin"></i></a></li>
+				<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+				<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a>
+				</li>
+			</ul>
+		</section>
+		<img class="scroll_down" src="./RESSOURCES/scroll_down.png" />
 	</div>
-		<div class="photomontage_bande">
-			<a class="lien_image" href="./html/INDEX/photomontage.html">
-				<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg" alt="Alvina DR - Illustration d'un pont entre deux falaises en bord de mer."/>
-				<p class="category_title"><span class="contour"> | </span>PHOTOMONTAGE<span class="contour"> | </span></p>
-			</a>
-			 <a class="lien_image" href="./html/INDEX/3d.html">
-				 <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg" alt="Alvina DR - Image d'une araignée cachée en-dessous d'un canapé."/>
-				 <p class="category_title"><span class="contour"> | </span>3D<span class="contour"> | </span></p>
-			</a>
-			 <a class="lien_image" href="./html/INDEX/photographie.html">
-				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg" alt="Alvina DR - Photographie d'une rainette verte."/>
-				<p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE<span class="contour"> | </span></p>
-			</a>
-			<a class="lien_image" href="./html/INDEX/jeu_video.html" >
-				 <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg" alt="Alvina DR - Écran titre jeu vidéo Crystal's Quest"/>
-				 <p class="category_title"><span class="contour"> | </span>JEU VIDÉO<span class="contour"> | </span></p>
-			</a>
-			<a class="lien_image" href="./html/INDEX/video.html">
-				<img class="couverture" src="./RESSOURCES/Couverture_Vidéo.jpg" alt="Alvina DR - Photographie d'un monstre au bout d'un tunnel."/>
-				<p class="category_title"><span class="contour"> | </span>VIDÉOS<span class="contour"> | </span></p>
-			</a>
-			<a class="lien_image" href="./html/INDEX/web.html">
-				 <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg" alt="Alvina DR - Exemple d'un site web dans un mockup d'ordinateur."/>
-				 <p class="category_title"><span class="contour"> | </span>WEB<span class="contour"> | </span></p>
-			</a>
-			<!--a class="lien_image" href="./html/INDEX/ecriture.html">
+
+	<div class="presentation_category">
+		<!--PRÉSENTATION DES DIFFÉRENTES CATÉGORIES DE TRAVAUX-->
+
+		<!--PHOTOMONTAGE-->
+		<a class="lien_image" href="./html/INDEX/photomontage.html">
+			<div class="example-1 card">
+				<div class="wrapper">
+					<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg"
+						alt="Alvina DR - Illustration d'un pont entre deux falaises en bord de mer." />
+					<div class="data">
+						<div class="content">
+							<p class="category_title"><span class="contour"> | </span>PHOTOMONTAGES</p>
+							<p class="text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé
+								à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la
+								plupart des cas il n'y a que la couverture d'un livre.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</a>
+		<br><br><br>
+		<!--ESPACEMENT-->
+
+		<!--3D-->
+		<a class="lien_image" href="./html/INDEX/3d.html">
+			<div class="example-1 card">
+				<div class="wrapper">
+					<img class="couverture" src="./RESSOURCES/Couverture_3D.jpg"
+						alt="Alvina DR - Image d'une araignée cachée en-dessous d'un canapé." />
+					<div class="data">
+						<div class="content">
+							<p class="category_title"><span class="contour"> | </span>3D</p>
+							<p class="text">
+								La 3D m'a toujours intéressé parce qu'elle offre une autre dimension que le dessin, elle
+								permet de vivre dans la scène. Voilà quelques rendus 3D et une modélisation du Tardis
+								faits par mes soins.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</a>
+		<br><br><br>
+		<!--ESPACEMENT-->
+
+		<!--PHOTOGRAPHIE-->
+		<a class="lien_image" href="./html/INDEX/photographie.html">
+			<div class="example-1 card">
+				<div class="wrapper">
+					<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg"
+						alt="Alvina DR - Photographie d'une rainette verte." />
+					<div class="data">
+						<div class="content">
+							<p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE</p>
+							<p class="text">Voilà quelques photos que j'ai prise.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</a>
+		<br><br><br>
+		<!--ESPACEMENT-->
+
+		<!--JEUX VIDÉOS-->
+		<a class="lien_image" href="./html/INDEX/jeu_video.html">
+			<div class="example-1 card">
+				<div class="wrapper">
+					<img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg"
+						alt="Alvina DR - Écran titre jeu vidéo Crystal's Quest" />
+					<div class="data">
+						<div class="content">
+							<p class="category_title"><span class="contour"> | </span>JEUX VIDÉOS</p>
+							<p class="text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai
+								contribué à la création.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</a>
+		<br><br><br>
+		<!--ESPACEMENT-->
+
+		<!--VIDÉOS-->
+		<a class="lien_image" href="./html/INDEX/video.html">
+			<div class="example-1 card">
+				<div class="wrapper">
+					<img class="couverture" src="./RESSOURCES/Couverture_Vidéo.jpg"
+						alt="Alvina DR - Photographie d'un monstre au bout d'un tunnel." />
+					<div class="data">
+						<div class="content">
+							<p class="category_title"><span class="contour"> | </span>VIDÉOS</p>
+							<p class="text">
+								Toutes les vidéos de ma chaîne YouTube sont disponibles ici. Il y a des making-of de
+								photomontages, des vidéos faites en classe et des expérimentations de court-métrage.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</a>
+		<br><br><br>
+		<!--ESPACEMENT-->
+
+		<!--WEB-->
+		<a class="lien_image" href="./html/INDEX/web.html">
+			<div class="example-1 card">
+				<div class="wrapper">
+					<img class="couverture" src="./RESSOURCES/Couverture_Web.jpg"
+						alt="Alvina DR - Exemple d'un site web dans un mockup d'ordinateur." />
+					<div class="data">
+						<div class="content">
+							<p class="category_title"><span class="contour"> | </span>WEB</p>
+							<p class="text">Création de site.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</a>
+		<br><br><br>
+		<!--ESPACEMENT-->
+
+		<!--a class="lien_image" href="./html/INDEX/ecriture.html">
 				<img class="couverture" src="./RESSOURCES/Couverture_Ecriture.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>ÉCRITURE<span class="contour"> | </span></p>
 		   </a-->
-		</div>
-		
-<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES -------------------------------------------------
+
+		<!-- FIN FIN FIN PRÉSENTATION DES DIFFÉRENTES CATÉGORIES DE TRAVAUX-->
+	</div>
+
+
+
+	<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES -------------------------------------------------
 <div class="carousel" data-flickity>
   !-- foreground parallax layer --
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
@@ -86,15 +192,16 @@
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
 </div-->
 
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+	<!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-<iframe class="include" src="html/0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+	<iframe class="include" src="html/0commons/footer.html" seamless></iframe>
+	<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
 
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="js/flickity.pkgd.js"></script>
-<script src="js/title.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script src="js/flickity.pkgd.js"></script>
+	<script src="js/title.js"></script>
 
-<!--------------------------------------------------------------------------------------------------------------->
-	</body>
+	<!--------------------------------------------------------------------------------------------------------------->
+</body>
+
 </html>
