flèche pour remonter vers le haut + souris scroll down animation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<iframe class="include fix" src="html/0commons/navbar.html" seamless></iframe>
 	<!------------------------------------------------------ PROJETS ------------------------------------------------>
-
+	<a href="#" class="bouton_remonter">▲</a>
 	<div class="present_bande">
 
 
@@ -40,14 +40,18 @@
 				</li>
 			</ul>
 		</section>
-		<img class="scroll_down" src="./RESSOURCES/scroll_down.png" />
+		<div class="move_mouse">
+			<a><section id="presentation" class="demo">
+			<a><span></span></a></a>
+			</section>
+		</div>
 	</div>
 
-	<div class="presentation_category">
+	<div class="presentation_category" >
 		<!--PRÉSENTATION DES DIFFÉRENTES CATÉGORIES DE TRAVAUX-->
 
 		<!--PHOTOMONTAGE-->
-		<a class="lien_image" href="./html/INDEX/photomontage.html">
+		<a class="lien_image"  href="./html/INDEX/photomontage.html">
 			<div class="example-1 card">
 				<div class="wrapper">
 					<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg"
