flèche vers le haut partout

--- a/html/DUT MMI/crystal.html
+++ b/html/DUT MMI/crystal.html
@@ -18,6 +18,8 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
+<a href="#" class="bouton_remonter">▲</a>
+
 <div class="row_simple" id="start">
 <div class="column_simple">
 		<p class="explication_text">Le deuxième projet vidéoludique dont j'ai fait partie était également un atelier MMI. 
