--- a/html/DUT MMI/infographie.html
+++ b/html/DUT MMI/infographie.html
@@ -19,6 +19,8 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!----------------------------------------------------------- IMAGES -------------------------------------------------------->
+<a href="#" class="bouton_remonter">▲</a>
+
 <div class="carousel carousel_infographie" data-flickity>
   <!-- foreground parallax layer -->
     <div class="carousel-cell"><img src="../../RESSOURCES/1 - Infographie/RENDU 1.5.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
