--- a/html/DUT MMI/museum.html
+++ b/html/DUT MMI/museum.html
@@ -18,6 +18,8 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
+<a href="#" class="bouton_remonter">▲</a>
+
 <div class="row_simple" id="start">
 	<div class="column_simple" id="half">
 		<p class="explication_text">Voilà le premier gros projet que l'on a eu à faire en groupe au début du DUT MMI. Il fallait réaliser un jeu vidéo sur Scratch, un logiciel créé par le MIT pour rendre la programmation graphique et comprendre l'algorithmique. Nous étions quatre par groupes et ne connaissions encore personne.</p>
