--- a/html/DUT MMI/nanimo.html
+++ b/html/DUT MMI/nanimo.html
@@ -20,6 +20,8 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 	<!----------------------------------------------------------- ATELIER ------------------------------------------------------->
+	<a href="#" class="bouton_remonter">▲</a>
+
 	<div class="row_simple" id="start">
 		<div class="column_simple" id="half">
 			<p class="explication_text">C'est fin Janvier 2021 que j'ai participé à ma première Game Jam. Le thème était
