--- a/html/INDEX/3d.html
+++ b/html/INDEX/3d.html
@@ -18,7 +18,7 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
-
+<a href="#" class="bouton_remonter">▲</a>
 
 
 <div class="presentation_dut_mmi_case">
