--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -19,6 +19,7 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!------------------------------------------------------ JEU VIDEO ------------------------------------------------------>
+<a href="#" class="bouton_remonter">▲</a>
 
 <div class="presentation_dut_mmi_case">
 	<p class="presentation_text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai contribué à la création.</p>
