--- a/html/INDEX/web.html
+++ b/html/INDEX/web.html
@@ -18,6 +18,8 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+<a href="#" class="bouton_remonter">▲</a>
+
 <p class="presentation_text">Création de site.</p>
 
 <div class="dut_ligne_case">
