--- a/html/dut mmi.html
+++ b/html/dut mmi.html
@@ -20,6 +20,8 @@
 
 <iframe class="include fix" src="0commons/navbar.html" seamless></iframe>
 <!--------------------------------------------------- GALERIE PROJETS ------------------------------------------------------>
+<a href="#" class="bouton_remonter">▲</a>
+
 
 	<div class="presentation_dut_mmi_case">
 		<p class="presentation_text">En 2020, j'ai intégré le DUT Métiers du Multimédia et de l'Internet de l'IUT Bordeaux Montaigne. Durant toute l'année nous avons réalisé une foule de projets. Découvrez-les sur cette page !</p>
