--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -18,6 +18,8 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+<a href="#" class="bouton_remonter">▲</a>
+
 <p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
 
 <div class="gallerie">
