--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -19,6 +19,7 @@
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
+<a href="#" class="bouton_remonter">▲</a>
 
 <div class="presentation_dut_mmi_case">
 	<p class="presentation_text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la plupart des cas il n'y a que la couverture d'un livre.</p>
