--- a/html/INDEX/video.html
+++ b/html/INDEX/video.html
@@ -18,6 +18,8 @@
 
 <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+<a href="#" class="bouton_remonter">▲</a>
+
 <p class="presentation_text">Toutes les vidéos de ma chaîne YouTube sont disponibles ici. Il y a des making-of de photomontages, des vidéos faites en classe et des expérimentations de court-métrage.</p>
 
 <div class="video_total"> 
