--- a/html/presentation.html
+++ b/html/presentation.html
@@ -1,44 +1,60 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="../icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Présentation</title>
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="../icon.ico" />
+	<meta name="description"
+		content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+	<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<link rel="stylesheet" href="../css/style.css">
-		<link rel="stylesheet" href="../css/flickity.css">
+	<title>Alvina Damasio--Razafiarizaka | Présentation</title>
 
-	</head>
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/presentation.css">
+	<link rel="stylesheet" href="../css/flickity.css">
 
-<iframe class="include fix" src="0commons/navbar.html" seamless></iframe>
-<!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
-<a href="#" class="bouton_remonter">▲</a>
+</head>
 
-<div class="presentation_dut_mmi_case">
-	<p class="presentation_text">Actuellement en première année à l'IUT Bordeaux Montaigne, j'étudie pour obtenir un DUT Métiers 
-		du Multimédia et de l'Internet (MMI).</p>
-	<p class="presentation_text">mail : alvinadr24@gmail.com</p>
-	
-	<p class="presentation_text">J'adore lire et écrire depuis que je suis petite. Dès que j'ai découvert les 
-	jeux vidéos (avec Pokémon Platine) j'ai voulu concevoir mes propres jeux, d'abord sur RPG Maker puis sur Unity. C'est à
-	travers eux d'ailleurs que j'ai rencontré Photoshop que je n'ai pas lâché depuis la sixième. De manière générale je m'intéresse 
-	à la création d'histoire que j'ai pu expérimenter à travers de nombreux supports (photographie, illustration sur photoshop, vidéo, 
-	écriture, jeu vidéo, 3D).</p>
-</div>
+<body>
+	<!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+	<iframe class="include fix" src="0commons/navbar.html" seamless></iframe>
+	<!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
+	<a href="#" class="bouton_remonter">▲</a>
 
-<iframe class="include" src="0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../js/flickity.pkgd.js"></script>
-<!--------------------------------------------------------------------------------------------------------------->
+	<div class="espace"></div>
+	<div class="row_simple_present">
+		<div class="column_simple" id="tiers">
+			<h1 class="present_big_present">Présentation</h1>
+			<p class="explication_text_present">Actuellement en première année à l'IUT Bordeaux Montaigne, j'étudie pour
+				obtenir un DUT Métiers
+				du Multimédia et de l'Internet (MMI).
+				<br><br> J'adore lire et écrire depuis que je suis petite. Dès que j'ai découvert les
+				jeux vidéos (avec Pokémon Platine) j'ai voulu concevoir mes propres jeux, d'abord sur RPG Maker puis
+				sur Unity. C'est à
+				travers eux d'ailleurs que j'ai rencontré Photoshop que je n'ai pas lâché depuis la sixième. De
+				manière générale je m'intéresse
+				à la création d'histoire que j'ai pu expérimenter à travers de nombreux supports (photographie,
+				illustration sur photoshop, vidéo,
+				écriture, jeu vidéo, 3D).
+			</p>
+		</div>
+		<div class="column_simple" id="deuxtiers">
+			<img src="../RESSOURCES/Alvina DR - CV.jpg" width="90%">
+		</div>
+	</div>
 
-	</body>
+
+	<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+
+	<iframe class="include" src="0commons/footer.html" seamless></iframe>
+	<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+	<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script src="../js/flickity.pkgd.js"></script>
+	<!--------------------------------------------------------------------------------------------------------------->
+
+</body>
+
 </html>
