réparation photo hover

--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -41,7 +41,7 @@
 			<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg" alt="Photo d'un manchot."/></a>
 </div>
 <div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg" alt="Grosse photo d'une rainette verte."/></a>
+	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg" alt="Grosse photo d'une rainette verte."/></a>
 </div>
 <div class="dut_ligne_case">
 	<a class="photo_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg" alt="Photo d'une corde pendue."/></a>
