arrangement espace infographie

--- a/html/DUT MMI/infographie.html
+++ b/html/DUT MMI/infographie.html
@@ -29,7 +29,8 @@
     <div class="carousel-cell"><img src="../../RESSOURCES/1 - Infographie/RENDU 4.1.jpg" width="100%"/></div>
     <div class="carousel-cell"><img src="../../RESSOURCES/1 - Infographie/RENDU 5.1.jpg" width="100%"/></div>
     <div class="carousel-cell"><img src="../../RESSOURCES/1 - Infographie/RENDU 6.1.jpg" width="100%"/></div>
-</div>
+</div>	
+<div class="espace"></div>
 
 <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
 <div class="row_simple">
