correction erreur orthographe

--- a/html/DUT MMI/crystal.html
+++ b/html/DUT MMI/crystal.html
@@ -34,7 +34,7 @@
 <div class="row_simple">
 		<p class="explication_text">Sur ce projet je me suis occupée de tous la programmation en C# (qui était assez réduite mais 
 			restait un obstacle comme nous n'avions jamais eu de cours sur ce langage). J'ai aussi pris en charge la partie Level 
-			Design et la conception du menu et des paramètres qui l'accompagne.</p>
+			Design et la conception du menu et des paramètres qui l'accompagnent.</p>
 </div>
 <div class="row_simple">
 	<div class="column_simple" id="half">
