intégration du jeu depuis itch.io

--- a/html/DUT MMI/nanimo.html
+++ b/html/DUT MMI/nanimo.html
@@ -40,6 +40,7 @@
 				etc...). J'ai aussi participé
 				à la création de prefabs d'animaux sur Unity.
 			</p>
+			
 		</div>
 		<div class="column_simple video" id="half">
 			<p class="explication_text">Voilà le superbe trailer du jeu réalisé par Pauline Grellier !
@@ -56,8 +57,11 @@
 	<div class="row_simple">
 		<!--LIEN VERS LE JEU-->
 		<div class="column_simple" id="half">
-			<p class="link_text">Pour essayer le jeu cliquez <a class="lien"
-					href="https://shynamo.itch.io/nanimo">ici</a>.</p>
+			<!--p class="link_text">Pour essayer le jeu cliquez <a class="lien"
+					href="https://shynamo.itch.io/nanimo">ici</a>.</p-->
+					<iframe frameborder="0" src="https://itch.io/embed-upload/3312351?color=333333" allowfullscreen="" width="900" height="550"><a href="https://shynamo.itch.io/nanimo">Play Nanimo on itch.io</a></iframe>
+					<div class="space"></div>
+					<iframe frameborder="0" src="https://itch.io/embed/903107?linkback=true" width="900" height="167"><a href="https://shynamo.itch.io/nanimo">Nanimo by Shynamo, Alvina DR, wolffien, AnatoleCodeur, 0ur0boss</a></iframe>
 		</div>
 	</div>
 	<div class="space"></div>
