--- a/html/DUT MMI/crystal.html
+++ b/html/DUT MMI/crystal.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="../../icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Crystal's Quest</title>
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
-		<link rel="stylesheet" href="../../css/flickity.css">
+    <title>Alvina Damasio--Razafiarizaka | Crystal's Quest</title>
 
-	</head>
+    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../css/flickity.css">
 
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+</head>
 
-<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
-<!----------------------------------------------------------- ATELIER ------------------------------------------------------->
-<a href="#" class="bouton_remonter">▲</a>
+<body>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-<div class="row_simple" id="start">
-<div class="column_simple">
-		<p class="explication_text">Le deuxième projet vidéoludique dont j'ai fait partie était également un atelier MMI. 
-			La consigne était de réaliser un "Zelda Like" en quelques jours sur Unity (moteur de Jeu). Nous étions par 
-			groupe de 5 cette fois-ci. Crystal's Quest est un jeu post-apocalyptique où le héros peut voyager entre le présent 
-			en ruines et le passé encore intact ante-explosion. Le but est de retrouver les trois cristaux pour les ramener au professeur 
-			qui s'en servira pour annuler l'explosion dans le futur.</p>
-		<img class="gallerie_image" src="../../RESSOURCES/Couverture_Jeu_Vidéo.jpg" width="500px"/>
-</div>
-</div>
+    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
+    <a href="#" class="bouton_remonter">▲</a>
 
-<div class="row_simple">
-		<p class="explication_text">Sur ce projet je me suis occupée de tous la programmation en C# (qui était assez réduite mais 
-			restait un obstacle comme nous n'avions jamais eu de cours sur ce langage). J'ai aussi pris en charge la partie Level 
-			Design et la conception du menu et des paramètres qui l'accompagnent.</p>
-</div>
-<div class="row_simple">
-	<div class="column_simple" id="half">
-		<p class="link_text">Pour essayer le jeu cliquez <a class="lien" href="https://alvina-dr.itch.io/cristals-quest">ici</a>.</p>
-	</div>
-</div>
+    <div class="row_simple" id="start">
+        <div class="column_simple">
+            <p class="explication_text">Le deuxième projet vidéoludique dont j'ai fait partie était également un atelier MMI. La consigne était de réaliser un "Zelda Like" en quelques jours sur Unity (moteur de Jeu). Nous étions par groupe de 5 cette fois-ci. Crystal's Quest est
+                un jeu post-apocalyptique où le héros peut voyager entre le présent en ruines et le passé encore intact ante-explosion. Le but est de retrouver les trois cristaux pour les ramener au professeur qui s'en servira pour annuler l'explosion
+                dans le futur.</p>
+            <img class="gallerie_image" src="../../RESSOURCES/Couverture_Jeu_Vidéo.jpg" />
+        </div>
+    </div>
 
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+    <div class="row_simple">
+        <p class="explication_text">Sur ce projet je me suis occupée de tous la programmation en C# (qui était assez réduite mais restait un obstacle comme nous n'avions jamais eu de cours sur ce langage). J'ai aussi pris en charge la partie Level Design et la conception du menu
+            et des paramètres qui l'accompagnent.</p>
+    </div>
+    <div class="row_simple">
+        <div class="column_simple" id="half">
+            <iframe frameborder="0" src="https://itch.io/embed/812284?linkback=true&amp;dark=true" width="1000" height="167"><a href="https://hectaris.itch.io/crystalsquestjauneprod">Crystal's Quest by Hectaris, Alvina DR</a></iframe>
+            <p class="link_text">Pour essayer le jeu cliquez <a class="lien" href="https://alvina-dr.itch.io/cristals-quest">ici</a>.</p>
+        </div>
+    </div>
 
-<iframe class="include" src="../0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../../js/flickity.pkgd.js"></script>
-<script src="../../js/navbar.js"></script>
-<!--------------------------------------------------------------------------------------------------------------->
-	</body>
+    <!------------------------------------------------------ FOOTER ------------------------------------------------------>
+
+    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="../../js/flickity.pkgd.js"></script>
+    <script src="../../js/navbar.js"></script>
+    <!--------------------------------------------------------------------------------------------------------------->
+</body>
+
 </html>
