--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -1,59 +1,62 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8"/>
-		<link rel="icon" href="../../icon.ico" />
-		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
-		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Jeu vidéo</title>
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
-		<link rel="stylesheet" href="../../css/jeu.css">
-		<link rel="stylesheet" href="../../css/flickity.css">
-		<link rel="stylesheet" href="../../css/dut mmi.css">
+    <title>Alvina Damasio--Razafiarizaka | Jeu vidéo</title>
 
-	</head>
-	<body>
-<!--------------------------------------------------------- MENU ------------------------------------------------------>
+    <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../css/jeu.css">
+    <link rel="stylesheet" href="../../css/flickity.css">
+    <link rel="stylesheet" href="../../css/dut mmi.css">
 
-<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
-<!------------------------------------------------------ JEU VIDEO ------------------------------------------------------>
-<a href="#" class="bouton_remonter">▲</a>
+</head>
 
-<div class="presentation_dut_mmi_case">
-	<p class="presentation_text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai contribué à la création.</p>
-</div>
+<body>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-<div class="jeu_ligne_case">
-	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
-		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg"/>
-		<p class="cadre_sombre_texte"><span class="contour"> | </span>Room 203<span class="contour"> | </span></p>
-	</a>	
-	<a class="dut_projet" href="../../html/DUT MMI/crystal.html">
-		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg"/>
-		<p class="cadre_sombre_texte"><span class="contour"> | </span>Cristal's Quest<span class="contour"> | </span></p>
-	</a>
-</div>
-<div class="jeu_ligne_case">
-	<a class="dut_projet" href="../../html/DUT MMI/nanimo.html">
-		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg"/>
-		<p class="cadre_sombre_texte"><span class="contour"> | </span>Nanimo<span class="contour"> | </span></p>
-	</a>	
-	<a class=" invisible">
-		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg"/>
-		<p class="cadre_sombre_texte"><span class="contour"> | </span>Cristal's Quest<span class="contour"> | </span></p>
-	</a>
-</div>
-<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <!------------------------------------------------------ JEU VIDEO ------------------------------------------------------>
+    <a href="#" class="bouton_remonter">▲</a>
 
-<iframe class="include" src="../0commons/footer.html" seamless></iframe>
-<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="../../js/flickity.pkgd.js"></script>
-<script src="../../js/navbar.js"></script>
-<!--------------------------------------------------------------------------------------------------------------->
+    <div class="presentation_dut_mmi_case">
+        <p class="presentation_text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai contribué à la création.</p>
+    </div>
 
-	</body>
+    <div class="jeu_ligne_case">
+        <a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg" />
+            <p class="cadre_sombre_texte"><span class="contour"> | </span>Room 203<span class="contour"> | </span></p>
+        </a>
+        <a class="dut_projet" href="../../html/DUT MMI/crystal.html">
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg" />
+            <p class="cadre_sombre_texte"><span class="contour"> | </span>Cristal's Quest<span class="contour"> | </span></p>
+        </a>
+    </div>
+    <div class="jeu_ligne_case">
+        <a class="dut_projet" href="../../html/DUT MMI/nanimo.html">
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg" />
+            <p class="cadre_sombre_texte"><span class="contour"> | </span>Nanimo<span class="contour"> | </span></p>
+        </a>
+        <a class="dut_projet" href="../../html/DUT MMI/twr.html">
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Those Who Remain.jpg" />
+            <p class="cadre_sombre_texte"><span class="contour"> | </span>Those Who Remain<span class="contour"> | </span></p>
+        </a>
+    </div>
+    <!------------------------------------------------------ FOOTER ------------------------------------------------------>
+
+    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="../../js/flickity.pkgd.js"></script>
+    <script src="../../js/navbar.js"></script>
+    <!--------------------------------------------------------------------------------------------------------------->
+
+</body>
+
 </html>
