--- a/html/presentation.html
+++ b/html/presentation.html
@@ -2,58 +2,51 @@
 <html lang="fr">
 
 <head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="../icon.ico" />
-	<meta name="description"
-		content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
-	<meta name=”viewport” content=”width=device-width, initial-scale=1>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-	<title>Alvina Damasio--Razafiarizaka | Présentation</title>
+    <title>Alvina Damasio--Razafiarizaka | Présentation</title>
 
-	<link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="../css/presentation.css">
-	<link rel="stylesheet" href="../css/flickity.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/presentation.css">
+    <link rel="stylesheet" href="../css/flickity.css">
 
 </head>
 
 <body>
-	<!--------------------------------------------------------- MENU ------------------------------------------------------>
+    <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-	<iframe class="include fix" src="0commons/navbar.html" seamless></iframe>
-	<!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
-	<a href="#" class="bouton_remonter">▲</a>
+    <iframe class="include fix" src="0commons/navbar.html" seamless></iframe>
+    <!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
 
-	<div class="espace"></div>
-	<div class="row_simple_present">
-		<div class="column_simple" id="tiers">
-			<h1 class="present_big_present">Présentation</h1>
-			<p class="explication_text_present">Actuellement en première année à l'IUT Bordeaux Montaigne, j'étudie pour
-				obtenir un DUT Métiers
-				du Multimédia et de l'Internet (MMI).
-				<br><br> J'adore lire et écrire depuis que je suis petite. Dès que j'ai découvert les
-				jeux vidéos (avec Pokémon Platine) j'ai voulu concevoir mes propres jeux, d'abord sur RPG Maker puis
-				sur Unity. C'est à
-				travers eux d'ailleurs que j'ai rencontré Photoshop que je n'ai pas lâché depuis la sixième. De
-				manière générale je m'intéresse
-				à la création d'histoire que j'ai pu expérimenter à travers de nombreux supports (photographie,
-				illustration sur photoshop, vidéo,
-				écriture, jeu vidéo, 3D).
-			</p>
-		</div>
-		<div class="column_simple" id="deuxtiers">
-			<img src="../RESSOURCES/Alvina DR - CV.jpg" width="90%">
-		</div>
-	</div>
+    <div class="espace"></div>
+    <div class="row_simple_present">
+        <div class="column_simple" id="tiers">
+            <h1 class="present_big_present">Présentation</h1>
+            <p class="explication_text_present">Actuellement en première année à l'IUT Bordeaux Montaigne, j'étudie pour obtenir un DUT Métiers du Multimédia et de l'Internet (MMI).
+                <br><br> J'adore lire et écrire depuis que je suis petite. Dès que j'ai découvert les jeux vidéos (avec Pokémon Platine) j'ai voulu concevoir mes propres jeux, d'abord sur RPG Maker puis sur Unity. C'est à travers eux d'ailleurs que j'ai
+                rencontré Photoshop que je n'ai pas lâché depuis la sixième. De manière générale je m'intéresse à la création d'histoire que j'ai pu expérimenter à travers de nombreux supports (photographie, illustration sur photoshop, vidéo, écriture,
+                jeu vidéo, 3D).
+            </p>
+            <div class="space"></div>
+            <a href="" class="btn_download" download="RESSOURCES/Alvina DR - CV.pdf">Télécharger mon CV</a>
+        </div>
+        <div class="column_simple" id="deuxtiers">
+
+        </div>
+    </div>
 
 
-	<!------------------------------------------------------ FOOTER ------------------------------------------------------>
+    <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-	<iframe class="include" src="0commons/footer.html" seamless></iframe>
-	<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-	<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	<script src="../js/flickity.pkgd.js"></script>
-	<!--------------------------------------------------------------------------------------------------------------->
+    <iframe class="include" src="0commons/footer.html" seamless></iframe>
+    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="../js/flickity.pkgd.js"></script>
+    <!--------------------------------------------------------------------------------------------------------------->
 
 </body>
 
