fusion présentation contact

--- a/html/0commons/navbar.html
+++ b/html/0commons/navbar.html
@@ -8,10 +8,11 @@
 <body class="ft">
     <div class="navbar">
         <div class="haut">
-            <a class="icone" href="../../index.html" target="_parent"> <img src="../../RESSOURCES/a.png"
-                    width="100%" /></a>
-            <h1 class="prénom">Alvina<h1>
-                    <h2 class="nom">Damasio--Razafiarizaka<h2>
+            <a class="icone" href="../../index.html" target="_parent"> <img src="../../RESSOURCES/a.png" width="100%" /></a>
+            <h1 class="prénom">Alvina
+                <h1>
+                    <h2 class="nom">Damasio--Razafiarizaka
+                        <h2>
         </div>
         <nav>
             <div id="marker"></div>
@@ -19,7 +20,6 @@
             <li><a href="../../index.html" target="_parent">ACCUEIL</a></li>
             <!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
             <li><a href="../presentation.html" target="_parent">PRÉSENTATION</a></li>
-            <li><a href="../contact.html" target="_parent">CONTACT</a></li>
         </nav>
     </div>
 
