--- a/html/presentation.html
+++ b/html/presentation.html
@@ -32,6 +32,9 @@
             </p>
             <div class="space"></div>
             <a href="" class="btn_download" download="RESSOURCES/Alvina DR - CV.pdf">Télécharger mon CV</a>
+            <br>
+            <p class="explication_text_present">Pour toute demande vous pouvez me contacter à l'adresse mail : <a class="lien" href="mailto:alvinadr24@gmail.com">alvinadr24@gmail.com</a>.
+            </p>
         </div>
         <div class="column_simple" id="deuxtiers">
 
